# clipper

./: Cargo.toml  README.md
src/: action.rs  cli.yml  config.rs  error.rs  main.rs  notes.rs  trello.rs  utils.rs
