[package]
name = "clipper"
version = "0.1.0"
authors = ["noelzubin <noelzubinvictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
clap = {version = "2.33", features = ["yaml"]}
reqwest = "0.9.18"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
lazy_static = "1.3.0"
dirs = "2.0.1"
toml = "0.5.1"
failure = "0.1.5"
notify-rust = "3"
